[Site] fixed student one liner overflowing

--- a/_sass/_students.scss
+++ b/_sass/_students.scss
@@ -41,5 +41,9 @@
         hr {
             margin-bottom: 5px;
         }
+
+        small {
+            word-wrap: break-word;
+        }
     }
 }
